# wikimedia

./: .gitignore  LICENSE  README.md  pyproject.toml  references.bib  setup.cfg
code/: download_wikimedia.py  extract_article_metadata.py  extract_article_text.py  extract_metadata.py  requirements.txt  requirments.txt  tokenize_article_text.py  tokenize_wikimedia_jsonl.py  utils.py  wikimedia_to_json.py  wikimedia_to_jsonl.py
src/wikimedia/: __main__.py  requirements.txt  tokenize_wikimedia_jsonl.py  wikimedia_to_jsonl.py
src/wikimedia/dtypes/: Convert.py  Metadata.py  ProcessError.py  __init__.py  types.py
src/wikimedia/mode/: __init__.py  const.py  convert.py  download.py
src/wikimedia/modes/: Convert.py  Metadata.py  __init__.py
src/wikimedia/utils/: __init__.py  extract_helper.py  fs_helper.py  pipeline_helper.py  progress_helper.py
src/wikimedia/xxx/: Convert.py
