[metadata]
name = wikimedia
version = attr: wikimedia.__init__.__version__
url = https://github.com/TextCorpusLabs/wikimedia
project_urls =
    Bug Reports = https://github.com/TextCorpusLabs/wikimedia/issues
    Source = https://github.com/TextCorpusLabs/wikimedia
author = @markanewman
author_email = github@trinetteandmark.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
license = MIT
description = Tools for wikimedia
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    jsonlines>=1.2.0,<2.0.0
    progressbar2>=3.51.4,<4.0.0
    mwparserfromhell>=0.5.4,<0.6.0
    mwxml>=0.3.3,<0.4.0
    nltk>=3.4.5,<4.0.0
    wget>=3.2,<4.0

python_requires = >=3.10,<4
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    wikimedia = wikimedia.__main__:main

[options.packages.find]
where = src
